vote-app/base/result-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: result
  namespace: apps
spec:
  rules:
  - host: result.$(DNS_NAME)
    http:
      paths:
      - backend:
          serviceName: result-service
          servicePort: 80
        path: /
